Fixed product main title on mobile devices

--- a/src/pages/Products/Products.scss
+++ b/src/pages/Products/Products.scss
@@ -146,6 +146,10 @@
     padding-left: 0;
   }
 
+  .product__main-title {
+    margin-top: 80px;
+  }
+
   .product__not-found {
     padding: 40px;
     margin: 0 auto;
